us10 slight snyt.model og showsnyt

--- a/views/createSnyt.pug
+++ b/views/createSnyt.pug
@@ -22,6 +22,7 @@ block body
                         label Kategori
                             //input(type="text" name="snyt[category]")
                             select(name="snyt[category]")
+                                //TODO value="ac" -> value="AC"???
                                 option(value="ac") AC
                                 option(value="Logistik") Logistik
                                 option(value="Tovholder") Tovholder
