--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block body
                 thead
                     tr
                         th Emne
+                        //TODO add th Kategori???
                         th Dato
                         th Initialer
                         th Læst
