--- a/views/layout.pug
+++ b/views/layout.pug
@@ -53,6 +53,7 @@ html
                             br
                             select(id="advCategory")
                                 option(value="" selected="true")
+                                //TODO value="ac" -> value="AC"???
                                 option(value="ac") AC
                                 option(value="logistik") Logistik
                                 option(value="tovholder") Tovholder
