--- a/views/kvitoversigt.pug
+++ b/views/kvitoversigt.pug
@@ -7,6 +7,7 @@ block body
                 thead
                     tr
                         th Emne
+                        //TODO add th Kategori???
                         th Dato
                         th Initialer
                         th Mangler at læse
