--- a/views/editSnyt.pug
+++ b/views/editSnyt.pug
@@ -17,7 +17,7 @@ block body
                             input(type="date" name="snyt[created]" value=snyt.createdDate)
                         li
                         label Initialer
-                            input(type="text" name="snyt[user]", value=snyt.user)
+                            input(type="text" name="snyt[user]", value=snyt.user disabled="disabled")
                         li
                         label Kategori
                         div(class="cats")
