--- a/views/kvitoversigt.pug
+++ b/views/kvitoversigt.pug
@@ -12,3 +12,10 @@ block body
                         th Initialer
                         th Mangler at læse
                 tbody#snytKvitOversigt
+                    if data.snyt
+                        each snyt in data.snyt
+                            tr.clickableKvitRow(data-href=snyt._id onclick='gotoSnytKvit(this)')
+                                td #{snyt.subject}
+                                td #{snyt.created.toLocaleDateString()}
+                                td #{snyt.user}
+                                td #{data.userCount - snyt.readBy.length}
