--- a/views/showSnyt.pug
+++ b/views/showSnyt.pug
@@ -7,8 +7,7 @@ block body
                     fieldset
                     ul(type="none")
                         li
-                            a(href="/")
-                                button(type="button" class="btn btn-primary") Gå tilbage
+                            button(type="button" class="btn btn-primary" onclick="goBack();") Gå tilbage
                         li
                         a(name="snyt[edok]" href=snyt.edok) e-Dok
                         li
