--- a/views/createSnyt.pug
+++ b/views/createSnyt.pug
@@ -14,7 +14,7 @@ block body
                             input(type="text" name="snyt[edok]")
                         li
                         label Dato
-                            input#advDateFrom(type="date" name="snyt[created]" value=date)
+                            input#advDateFrom(type="date" name="snyt[created]" value=data)
                         li
                         label Initialer
                             input(type="text" name="snyt[user]" disabled="disabled" value=me.initials)
