Enterknap til søg
Merge remote-tracking branch 'remotes/origin/krilleBranch'

# Conflicts:
#	app.js
#	public/js/clientJs.js

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -92,7 +92,8 @@ html
                             br
 
                     div(class="modal-footer")
-                        button(type="button" class="btn btn-primary" onClick="advancedSearch();" form="advSearch") Søg
+                        button(type="button" class="btn btn-primary" onClick="advancedSearch();" form="advSearch"
+                        id="searchAdv") Søg
                         button(type="button" class="btn btn-secondary" data-dismiss="modal") Luk
         if errors
             if errors.length > 0
