--- a/views/editSnyt.pug
+++ b/views/editSnyt.pug
@@ -7,8 +7,6 @@ block body
                     fieldset
                     ul(type="none")
                         li
-                            button(type="button" class="btn btn-primary" onclicl="goBack();") Gå tilbage
-                        li
                             label e-Dok
                                 input(type="text" name="snyt[edok]" value=data.edok)
                         li
@@ -30,15 +28,20 @@ block body
                                 option(value="IT") IT
                                 option(value="Klinisk Forsøg") Klinisk Forsøg
                                 option(value="Produktion") Produktion
+                        br
                         li
                             button(type="submit" class="btn btn-primary") OK
+                            button(type="button" class="btn btn-primary" onclick="goBack();" style="margin-left: " +
+                            "5px;") Gå tilbage
 
                         input(type="text" name="snyt[_id]" value=data._id hidden)
 
                 div(class="col-10")
                     ul(type="none")
                         li
+                            label Emne
                             input(type="text" name="snyt[subject]" value=data.subject style="width: 1073px;")
+                        br
                         li
                             textarea(rows="20" cols="150" name="snyt[text]").form-control=data.text
 
