--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,11 +26,14 @@ html
                     ul(class="navbar-nav mr-auto")
                         li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
                         li(class="nav-item"): a(class="nav-link" href="/kvitoversigt") Læsekvittering oversigt
-                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="regularSearchText" style="width: 750px;")
-                    button(class="btn btn-outline-success my-2 my-sm-0" id="search" onClick="regularSearch();") Search
+                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+                    id="regularSearchText" style="width: 33em;")
+                    button(class="btn btn-info" id="search" onClick="regularSearch();"
+                    style="margin-right: 5px;") Search
 
                     form(class="form-inline my-2 my-lg-0")
-                        button(type="button" class="btn btn-primary" data-toggle="modal" data-target="#advancedSearch") Flere søgemuligheder
+                        button(type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal"
+                        data-target="#advancedSearch") Flere søgemuligheder
 
                     ul(class="navbar-nav")
                         li(class="nav-item dropdown")
