--- a/views/editSnyt.pug
+++ b/views/editSnyt.pug
@@ -16,7 +16,7 @@ block body
                             input(type="date" name="snyt[created]" value=data.createdDate)
                         li
                         label Initialer
-                            input(type="text" name="snyt[user]", value=data.user)
+                            input(type="text" name="snyt[user]", readonly value=me.initials)
                         li
                         label Kategori
                         div(class="cats")
