--- a/views/updateSnyt.pug
+++ b/views/updateSnyt.pug
@@ -13,7 +13,7 @@ block body
                             input(type="date" name="subsnyt[created]" value=data.date)
                         li
                         label Initialer
-                            input(type="text" name="snyt[user]" readonly value=me.initials)
+                            input(type="text" name="subsnyt[user]" readonly value=me.initials)
 
                         li
                             button(type="submit" class="btn btn-primary") OK
